<resources>
    <string name="app_name">NMedia</string>
    <string name="netology_logo">NMedia Logo</string>
    <string name="number_of_likes">110К</string>
    <string name="number_of_views">777К</string>
    <string name="number_of_share">15</string>
    <string name="views">Views</string>
    <string name="to_share">Share</string>
    <string name="menu_button">Menu Button</string>
    <string name="like_button">Like</string>
    <string name="post_text">Post Text</string>
    <string name="menu_item_edit">Edit</string>
    <string name="menu_item_delete">Delete</string>
    <string name="error_empty_content">Content cannot be empty</string>
    <string name="enter_text">Enter text</string>
    <string name="enter_confirmation">Enter the Confirmation</string>
    <string name="undo_editing">Undo editing</string>
    <string name="chooser_share_post">Share post with..</string>
    <string name="add_post">Add new post</string>
    <string name="cancelEditing">Cancel editing</string>
    <string name="enter_video_link">Enter your video link here</string>
    <string name="error_url_validation">Invalid url</string>
    <string name="error_play_video_validation">Something went wrong! The video cannot be played!!!</string>
    <string name="channel_remote_name">Notification Service</string>
    <string name="channel_remote_description">Notifications from a remote service</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="notification_else_action">There have been changes made in %1$s the post. Let\'s look at it.</string>
    <string name="notification_user_share">User %1$s shared %2$s\'s post</string>
    <string name="notification_new_post">User %1$s created a new post</string>
    <string name="notification_new_viewer">User %1$s viewed the post</string>
    <string name="error_loading">Something went wrong. Try again a bit later</string>
    <string name="retry_loading">Please, retry</string>
    <string name="empty_posts">There are no posts</string>
</resources>