<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/common_spacing"
    tools:context=".activity.MainActivity">

    <ImageView
        android:id= "@+id/avatar"
        android:layout_width="@dimen/netology_avatar_size"
        android:layout_height="@dimen/netology_avatar_size"
        android:layout_marginBottom="@dimen/common_spacing"
        android:contentDescription="@string/netology_logo"
        app:layout_constraintBottom_toBottomOf="@id/barrierTop"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/netology_avatar"
        tools:srcCompat="@sample/avatars" />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@id/published"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@sample/posts.json/data/author" />

    <TextView
        android:id="@+id/published"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:layout_marginBottom="@dimen/common_spacing"
        app:layout_constraintBottom_toBottomOf="@id/barrierTop"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/author"
        tools:text="@sample/posts.json/data/published" />

    <ImageButton
        android:id="@+id/menu"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/menu_button"
        app:srcCompat="@drawable/ic_more_vert_menu_24"
        android:tint="#7A7777"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/ic_more_vert_menu_24" />

    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:textAlignment="viewStart"
        android:gravity="start"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginBottom="@dimen/common_spacing"
        android:autoLink="web"
        app:layout_constraintTop_toBottomOf="@id/barrierTop"
        app:layout_constraintBottom_toTopOf="@id/barrierBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@sample/posts.json/data/content" />

    <ImageButton
        android:id="@+id/likeButton"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginBottom="@dimen/common_spacing"
        android:layout_marginTop="@dimen/common_spacing"
        android:background="@android:color/transparent"
        android:contentDescription="@string/like_button"
        app:layout_constraintTop_toTopOf="@id/barrierBottom"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/baseline_favorite_border_black_24dp" />

    <TextView
        android:id="@+id/numberOfLikes"
        android:layout_width="50dp"
        android:layout_height="24dp"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toEndOf="@+id/likeButton"
        app:layout_constraintTop_toTopOf="@+id/likeButton"
        tools:text="@string/number_of_likes" />

    <ImageButton
        android:id="@+id/shareButton"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginLeft="@dimen/common_spacing"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/baseline_share_black_24dp"
        app:layout_constraintStart_toEndOf="@id/numberOfLikes"
        app:layout_constraintTop_toTopOf="@id/numberOfLikes"
        android:contentDescription="@string/to_share" />

    <TextView
        android:id="@+id/numberOfShare"
        android:layout_width="50dp"
        android:layout_height="24dp"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toEndOf="@id/shareButton"
        app:layout_constraintTop_toTopOf="@id/shareButton"
        tools:text="@string/number_of_share" />


    <ImageButton
        android:id="@+id/viewsButton"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:contentDescription="@string/views"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toStartOf="@+id/numberOfViews"
        app:layout_constraintTop_toTopOf="@id/numberOfViews"
        app:srcCompat="@drawable/baseline_visibility_black_24dp" />

    <TextView
        android:id="@+id/numberOfViews"
        android:layout_width="50dp"
        android:layout_height="24dp"
        android:layout_marginEnd="5dp"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:layout_marginRight="5dp"
        android:layout_marginTop="@dimen/common_spacing"
        app:layout_constraintTop_toTopOf="@id/barrierBottom"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/number_of_views" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar,published,menu"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="80dp" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="content"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="80dp" />

</androidx.constraintlayout.widget.ConstraintLayout>